--- a/base.yml
+++ b/base.yml
@@ -1,7 +1,7 @@
 version: "2"
 services:
   webserver:
-    image: "moodlehq/moodle-php-apache:${MOODLE_DOCKER_PHP_VERSION}"
+    image: "mattp:moodle_dev"
     depends_on:
       - db
     volumes:
