WIP: add keycloak and matrix containers to setup

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,11 @@ MOODLE_DOCKER_WWWROOT=/absolute/path/to/Moodle/on/host
 MOODLE_DOCKER_DB=pgsql
 COMPOSE_PROJECT_NAME=moodlemaster
 MOODLE_DOCKER_WEB_PORT=1234
+MOODLE_DOCKER_PG_PORT=5433
+MOODLE_DOCKER_DBNAME=moodle
+MOODLE_DOCKER_DBUSER=moodle
+MOODLE_DOCKER_DBPASS="m@0dl3ing"
+MOODLE_DOCKER_BROWSER=firefox
+KEYCLOAK_ADMIN=admin
+KEYCLOAK_ADMIN_PASSWORD=admin
+
