--- a/db.pgsql.yml
+++ b/db.pgsql.yml
@@ -4,8 +4,10 @@ services:
     environment:
       MOODLE_DOCKER_DBTYPE: pgsql
   db:
-    image: postgres:${MOODLE_DOCKER_DB_VERSION:-12}
+    image: postgres:${MOODLE_DOCKER_DB_VERSION:-14}
     environment:
       POSTGRES_USER: moodle
       POSTGRES_PASSWORD: "m@0dl3ing"
       POSTGRES_DB: moodle
+    ports:
+      - "${MOODLE_DOCKER_PG_PORT}:5432"
