--- a/db.pgsql.yml
+++ b/db.pgsql.yml
@@ -6,8 +6,8 @@ services:
   db:
     image: postgres:${MOODLE_DOCKER_DB_VERSION:-14}
     environment:
-      POSTGRES_USER: moodle
-      POSTGRES_PASSWORD: "m@0dl3ing"
-      POSTGRES_DB: moodle
+      POSTGRES_USER: "${MOODLE_DOCKER_DBUSER}"
+      POSTGRES_PASSWORD: "${MOODLE_DOCKER_DBPASS}"
+      POSTGRES_DB: "${MOODLE_DOCKER_DBNAME}"
     ports:
       - "${MOODLE_DOCKER_PG_PORT}:5432"
