--- a/moodle_dev/Dockerfile
+++ b/moodle_dev/Dockerfile
@@ -22,3 +22,8 @@ COPY assets/tideways.ini /usr/local/etc/php/conf.d/tideways.ini
 # Setup debug requirements.
 RUN pecl install xdebug
 COPY assets/docker-php-ext-xdebug.ini /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
+
+# SSL for Apache2
+COPY assets/certs/ /etc/ssl/certs/
+COPY assets/443-default.conf /etc/apache2/sites-enabled/443-default.conf
+RUN a2enmod ssl
