--- a/base.yml
+++ b/base.yml
@@ -13,6 +13,8 @@ services:
       MOODLE_DOCKER_DBPASS: "${MOODLE_DOCKER_DBPASS}"
       MOODLE_DOCKER_BROWSER: "${MOODLE_DOCKER_BROWSER}"
       MOODLE_DOCKER_WEB_HOST: "${MOODLE_DOCKER_WEB_HOST}"
+    ports:
+      - "443:443"
   exttests:
     image: moodlehq/moodle-exttests
     volumes:
