updates for multiple certs

--- a/moodle_dev/assets/443-default.conf
+++ b/moodle_dev/assets/443-default.conf
@@ -1,9 +1,9 @@
 <VirtualHost *:443>
-    ServerName localhost
+    ServerName webserver
     DocumentRoot /var/www/html
     ErrorLog /var/log/apache2/error.log
     CustomLog /var/log/apache2/access.log combined
     SSLEngine on
-    SSLCertificateFile "/etc/ssl/certs/localhost.crt"
-    SSLCertificateKeyFile "/etc/ssl/certs/localhost.key"
+    SSLCertificateFile "/etc/ssl/certs/webserver.crt"
+    SSLCertificateKeyFile "/etc/ssl/certs/webserver.key"
 </VirtualHost>
