update git ignore to handle refactored folder structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,11 +3,7 @@ local.yml
 .env
 homeserver.db
 media_store/
-keycloak/h2/
-moodle_dev/assets/certs/ca.pem
-moodle_dev/assets/certs/localhost.crt
-moodle_dev/assets/certs/localhost.ext
-moodle_dev/assets/certs/ca.key
-moodle_dev/assets/certs/ca.srl
-moodle_dev/assets/certs/localhost.csr
-moodle_dev/assets/certs/localhost.key
+keycloak/data/h2/
+moodle_dev/assets/certs/
+!moodle_dev/assets/certs/createcerts.sh
+!moodle_dev/assets/certs/README.md
