docker networking tweaks

--- a/base.yml
+++ b/base.yml
@@ -37,6 +37,11 @@ services:
     environment:
       KEYCLOAK_ADMIN: "${KEYCLOAK_ADMIN}"
       KEYCLOAK_ADMIN_PASSWORD: "${KEYCLOAK_ADMIN_PASSWORD}"
+    healthcheck:
+      test: [ "CMD", "curl", "-f", "-k", "https://keycloak:8443/realms/moodle/.well-known/openid-configuration" ]
+      interval: 30s
+      timeout: 10s
+      retries: 5
   synapse:
     image: "matrixdotorg/synapse:latest"
     volumes:
@@ -50,6 +55,7 @@ services:
       - "8448:8448"
     depends_on:
       - keycloak
+    restart: on-failure
   element:
     image: vectorim/element-web
     volumes:
@@ -60,3 +66,10 @@ services:
       - "8081:8081"
     depends_on:
       - synapse
+networks:
+  default:
+    ipam:
+      driver: default
+      config:
+        - subnet: 172.32.238.0/24
+          gateway: 172.32.238.1
