unignore cert generation script

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,10 @@ local.yml
 homeserver.db
 media_store/
 keycloak/data/h2/
-moodle_dev/assets/certs/
-!moodle_dev/assets/certs/createcerts.sh
-!moodle_dev/assets/certs/README.md
+moodle_dev/assets/certs/*.key
+moodle_dev/assets/certs/*.crt
+moodle_dev/assets/certs/*.csr
+moodle_dev/assets/certs/*.ext
+moodle_dev/assets/certs/*.pem
+moodle_dev/assets/certs/*.srl
 !keycloak/data/h2/README.md
